完成后两题

--- a/写之前先看看这个.md
+++ b/写之前先看看这个.md
@@ -8,6 +8,10 @@
 
 接下来我们把练习题分给每个人，在题目对应的页面写就可以了
 
+### update 6.17
+将前端要展示的图片统一存放在了public/testPic文件夹中
+引入了react-syntax-highlighter 的代码块依赖，可以看看这个好不好用
+
 **环境配置：**
 
 安装node.js 和npm
